# aicomm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _typos.toml
.github/workflows/: build.yml
chat/: Cargo.toml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: mod.rs  ollama.rs  openapi.rs  test.rs
chat/analytics-server/: Cargo.toml  analytics.yml  build.rs
chat/analytics-server/api_test/: event.rest
chat/analytics-server/examples/: db.rs  sender.rs
chat/analytics-server/src/: config.rs  error.rs  events.rs  extractors.rs  handler.rs  handlers.rs  lib.rs  main.rs
chat/analytics_server/: Cargo.toml  analytics.yml
chat/analytics_server/src/: events.rs  handlers.rs  lib.rs
chat/bot_server/: Cargo.toml  bot.yml
chat/bot_server/src/: config.rs  indexer.rs  notif.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml
chat/chat_server/api_test/: agent.rest  bot.rest  chat.rest  message.rest
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  chat.rs  message.rs  messages.rs  user.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20241022161138_agent.sql  20241027062325_agent_adapter.sql  20241104121726_user_bot.sql
chat/notify_server/: Cargo.toml  index.html
chat/notify_server/src/: main.rs
chatapp/: buf.gen.yaml
fixtures/: analytics.yml  bot.yml  chat.yml  notify.yml
protos/: clickhouse.sql  messages.proto
swiftide-pgvector/: .gitignore  Cargo.toml
swiftide-pgvector/examples/: docker-compose.yml  indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
(+12 files in other folders)
