[workspace]
members = ["chat_core", "chat_server", "chat_test", "notify_server"]
resolver = "2"


[workspace.dependencies]
chat-server = { path = "./chat_server" }
chat-core = { path = "./chat_core" }
notify-server = { path = "./notify_server" }
anyhow = "1.0.90"
axum = { version = "0.7.7", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    # "macros",
] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.10"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "fs",
    "cors",
    "trace",
] }
futures-util = "0.3.31"
